# runagents

./: .gitignore  .goreleaser.yml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md
.github/workflows/: deploy-docs.yml  docs.yml  post-release-verify.yml  python-sdk.yml  release-cli.yml  release-orchestrator.yml  repo-consistency.yml  test-install.yml
api/contracts/: action-plans-openapi.yaml  capabilities.yaml  openapi.yaml
catalog/: index.json
cli/: go.mod  go.sum  install.sh
cli/npm/: install.js  package.json
docs-site/: Dockerfile  buildspec.yml  mkdocs-rtd.yml  mkdocs.yml  nginx.conf  requirements-rtd.txt  requirements.txt
docs-site/docs/: contact.md  index.md  llms-full.txt  llms.txt  pricing.md
docs-site/docs-rtd/: conf.py  index.md  install.md
examples/deal-desk-langgraph-agent/: README.md  agent.py  requirements.txt
examples/handler-function/: agent.py
examples/hello-world/: agent.py
examples/langchain-agent/: agent.py  requirements.txt
examples/langchain-enterprise/: .env.example  README.md  agent.py  deploy.py  requirements.txt  runagents.yaml  tools.py
examples/langgraph-agent/: agent.py
examples/openai-sdk/: agent.py
mcp/: README.md  pyproject.toml
mcp/runagents_mcp/: __init__.py  __main__.py  server.py
openapi/: openapi.yaml
release/: capabilities-public.yaml
scripts/: check_repo_consistency.py  check_surface_parity.py  sync_openapi_artifacts.py  sync_release_versions.py
sdk/python/: README.md  pyproject.toml  runagents_runtime.py  test_runtime.py
sdk/python/runagents/: __init__.py  agent.py  client.py  config.py  runtime.py  types.py
sdk/python/runagents/cli/: __init__.py  binary.py  dev_cmd.py  init_cmd.py  main.py
sdk/python/runagents/cli/templates/: agent.py.tmpl  agents_md.tmpl  claude_md.tmpl  cursorrules.tmpl  gitignore.tmpl  mcp_json.tmpl  requirements.txt.tmpl  runagents.yaml.tmpl
sdk/python/runagents/mcp/: __init__.py  __main__.py  server.py
sdk/python/tests/: test_agent.py  test_cli_binary.py  test_cli_init.py  test_client.py  test_client_mcp_parity.py  test_client_parity.py  test_config.py  test_types.py
skills/: README.md
(+231 files in other folders)
