[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runagents-mcp"
version = "0.1.0"
description = "MCP server for the RunAgents AI agent platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
runagents-mcp = "runagents_mcp.server:main"

[project.urls]
Homepage = "https://runagents.io"
Documentation = "https://docs.runagents.io/cli/ai-assistant-setup/"
Repository = "https://github.com/runagents-io/runagents"
